test-cases/final-dump/io_flow_error.exp
Error detected during uniqueness checking of module(s) io_flow_error
Unique resource wybe.io.io live at end of module top-level code
final-dump/io_flow_error.wybe:8:6: Reuse of unique resource wybe.io.io
final-dump/io_flow_error.wybe:11:7: Reuse of unique resource wybe.io.io
final-dump/io_flow_error.wybe:11:7: Unique resource wybe.io.io assigned in a test context
