test-cases/final-dump/io_flow_error.wybe
def woops use io {
    !println("hello world!")
}

def {test,noinline} dunno { pass }

use io in {
    !println("shouldn't be allowed.")
}

if { !println("no go") & dunno :: pass
   | pass
   }

!woops
